Fix flickering snackbar from animation

--- a/src/styles/ui-elements.css
+++ b/src/styles/ui-elements.css
@@ -12,10 +12,10 @@
   justify-content: center;
 
   background-color: none;
-}
 
-#snackbar-container.show {
-  display: flex;
+  &.show {
+    display: flex;
+  }
 }
 
 #snackbar {
@@ -32,54 +32,15 @@
   transition-delay: 2s;
 }
 
-#snackbar.show {
+#snackbar-container.show > #snackbar {
   visibility: visible;
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  -webkit-animation: fadein 0.5s;
+  animation: fadein 0.5s;
 }
 
-@-webkit-keyframes fadein {
-  from {
-    bottom: 0;
-    opacity: 0;
-  }
-  to {
-    bottom: 30px;
-    opacity: 1;
-  }
-}
-
-@keyframes fadein {
-  from {
-    bottom: 0;
-    opacity: 0;
-  }
-  to {
-    bottom: 30px;
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fadeout {
-  from {
-    bottom: 30px;
-    opacity: 1;
-  }
-  to {
-    bottom: 0;
-    opacity: 0;
-  }
-}
-
-@keyframes fadeout {
-  from {
-    bottom: 30px;
-    opacity: 1;
-  }
-  to {
-    bottom: 0;
-    opacity: 0;
-  }
+#snackbar-container.fadeout > #snackbar {
+  -webkit-animation: fadeout 1s;
+  animation: fadeout 1s;
 }
 
 /* INFO BUTTON */
@@ -138,4 +99,50 @@
   color: white;
 
   z-index: 3;
+}
+
+/* ANIMATIONS */
+
+@-webkit-keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
 }
